--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-These are some of my dotfiles. They're pretty lame right now. The awesome ones are in my other computer. I'm just using git to keep them in synch.
+These are some of my dotfiles. They're pretty lame.
