--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+dotfiles
+========
+
 These are some of my dotfiles. They're pretty lame.
+---------------------------------------------------
+
+I use at least four different machines in a day and making a new one
+that I throw at the end of the day is not unusual. The goal is to have
+the same configuration in any of the machines I use.
+
+What I do is clone a local copy and then replace the existing
+files with symbolic links to the local clone of this repository.
+
+LICENSE
+-------
+Do whatever you want. If it breaks your computer, it's your fault.
